--- a/one.html
+++ b/one.html
@@ -14,7 +14,7 @@
 <script type="text/javascript">
 	function showSimpleStimulus() {
 		testActive = true;
-		if (currentExperiment.responses.length < 2) {
+		if (currentExperiment.responses.length < currentExperiment.maxTrials /2) {
 			document.getElementById("text").innerHTML = "<img src = 'animal.png' height = 344>";
 			currentExperiment.currentStimulus = 0;
 		} else {
@@ -25,7 +25,7 @@
 	}
 
 	function clearSimpleStimulus() {
-		if (currentExperiment.responses.length < 2) {
+		if (currentExperiment.responses.length < currentExperiment.maxTrials /2) {
 			document.getElementById("text").innerHTML = "<img src = '' height = 344><br />";
 		} else {
 			document.getElementById("text").innerHTML = "Press SPACE when you hear an animal sound.";
@@ -44,6 +44,8 @@
 			} else {
 				if (testActive) {
 					currentExperiment.stopTest();
+				} else {
+					currentExperiment.reportError();
 				}
 			}
 			break;
@@ -65,7 +67,7 @@
 	"<strong>Possible side effects of this experiment</strong>:<ul><li>extreme boredom</li><li>animal sounds (use headphones if you are in a lecture!)</li></ul><br />" +
 	"Press SPACE BAR to begin.", 
 	"Press SPACE BAR when you see the animal or hear its sound.", 
-	showSimpleStimulus, clearSimpleStimulus, onKey, 4, ["Animal image","Animal sound"]);
+	showSimpleStimulus, clearSimpleStimulus, onKey, 40, ["Animal image","Animal sound"]);
 </script>
 </body>
 </html>
