--- a/three.html
+++ b/three.html
@@ -106,7 +106,7 @@
 	"You will be shown names of different cities.<br />"+
 	"You have to decide whether the <strong>first letter</strong> of the city's name matches the <strong>last letter</strong> of the city mentioned just before.<br />" +
 	"E.g., for the city of Amsterda<strong>m</strong>, the city <strong>M</strong>oscow is a match, and <strong>N</strong>ew York is not.<br /> We start with the city <strong>"+
-	currentCity + "</strong>, i.e., after the experiment begins, you have to decide, whether the next city's name begins with <strong>" +
+	currentCity + "</strong>, i.e., after the experiment begins, you have to decide whether the next city's name begins with <strong>" +
 	currentCity.substring(currentCity.length-1) + "</strong>.<br />" +
 	"Press T (true) for match and F (false) for mismatch. Now press SPACE to begin.", 
 	"Press T for match and F for mismatch.", 
