--- a/four.html
+++ b/four.html
@@ -105,6 +105,8 @@
 	"Press SPACE BAR to begin.", 
 	"Press SPACE BAR to shoot.", 
 	showSimpleStimulus, clearSimpleStimulus, onKey, 20, ["Alien Invasion"]);
+	currentExperiment.largestDelay = 3;
+	currentExperiment.smallestDelay = 0.5;
 </script>
 </body>
 </html>
