--- a/six.html
+++ b/six.html
@@ -14,11 +14,11 @@
 <script src = "five.js"> </script>
 
 <script type="text/javascript"> 
-	currentExperiment = new experiment(5, 
-	"Please use your MOUSE to click the green circles.<br />" +
+	currentExperiment = new experiment(6, 
+	"Please use your TOUCHPAD to click the green circles.<br />" +
 	"Press SPACE BAR to begin.", 
-	"Please use your MOUSE to click the green circles.", 
-	showSimpleStimulus, clearSimpleStimulus, onKey, 100, ["Mouse"]);
+	"Please use your TOUCHPAD to click the green circles.", 
+	showSimpleStimulus, clearSimpleStimulus, onKey, 100, ["Touchpad"]);
 	currentExperiment.largestDelay = 0;
 	currentExperiment.smallestDelay = 0;
 </script>
