--- a/map.html
+++ b/map.html
@@ -16,13 +16,13 @@
 <!--
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 -->
-<script src="jquery-3.2.1.min.js"></script>
-<script src = "geography.sqf"></script>
-<script src = "js/progress.sqf"></script>
-<script src = "js/unitContainer.js"></script>
-<script src = "js/model.js"></script>
-<script src = "js/view.js"></script>
-<script src = "js/controller.js"></script>
+<script src="static/jquery-3.2.1.min.js"></script>
+<script src = "static/geography.sqf"></script>
+<script src = "static/js/progress.sqf"></script>
+<script src = "static/js/unitContainer.js"></script>
+<script src = "static/js/model.js"></script>
+<script src = "static/js/view.js"></script>
+<script src = "static/js/controller.js"></script>
 <script>
 
 //var polygons = [];
@@ -47,6 +47,6 @@ $(document).ready(function(){
 });
 
 </script>
-<img id="map" src="map.png">
+<img id="map" src="static/map.png">
 </body>
 </html>
